--- a/templates/index.html
+++ b/templates/index.html
@@ -29,17 +29,22 @@
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form action="/predict" method="post" enctype="multipart/form-data">
+                <form id="upload-form" enctype="multipart/form-data">
                     <div class="form-group">
                         <div id="drop-area" class="drag-drop">
                             <p>Drag & Drop your image here or click to upload</p>
-                            <input type="file" id="fileInput" name="file" class="form-control-file" style="display:none;">
+                            <input type="file" id="fileInput" name="file" class="form-control-file" accept="image/*" style="display:none;">
                         </div>
                     </div>
                     <div class="form-group">
                         <input type="submit" class="btn btn-success" value="Predict">
                     </div>
                 </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div id="result" style="margin-top: 20px;"></div>
             </div>
         </div>
     </div>
