--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
                         <div id="drop-area" class="drag-drop">
                             <p>Drag & Drop your image here or click to upload</p>
                             <input type="file" id="fileInput" name="file" class="form-control-file" accept="image/*" style="display:none;">
+                            <div id="image-preview" class="image-preview"></div>
                         </div>
-                        <div id="image-preview" style="margin-top: 20px;"></div>
                     </div>
                     <div class="form-group">
                         <input type="submit" class="btn btn-success" value="Predict" disabled>
