--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Predict</a></li>
-                <li><a href="#">Team</a></li>
+{#                <li><a href="">Team</a></li>#}
             </ul>
         </div>
     </nav>
@@ -34,7 +34,11 @@
                         <div id="drop-area" class="drag-drop">
                             <p>Drag & Drop your image here or click to upload</p>
                             <input type="file" id="fileInput" name="file" class="form-control-file" accept="image/*" style="display:none;">
-                            <div id="image-preview" class="image-preview"></div>
+                        </div>
+                        <div id="image-info" class="image-info" style="display: none;">
+                            <p id="image-name"></p>
+                            <button type="button" class="btn btn-info" id="view-image">View Image</button>
+                            <button type="button" class="btn btn-danger" id="remove-image">Remove Image</button>
                         </div>
                     </div>
                     <div class="form-group">
@@ -49,6 +53,29 @@
             </div>
         </div>
     </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="imageModalLabel">Uploaded Image</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img id="modal-image" src="" class="img-responsive" alt="Uploaded Image" style="max-width: 100%;">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
